--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@google-cloud/translate": "6.0.2",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "pm2": "4.4.0"
   }
